--- a/indexStyles.css
+++ b/indexStyles.css
@@ -625,7 +625,7 @@ main {
 }
 .approachAboutWrapper {
     width: 100%;
-    height: 20em;
+    height: 15em;
     margin-top: 3em;
     text-align: center;
     color: white;
@@ -725,7 +725,7 @@ main {
     flex-direction: column;
     height: 160em;
     width: 100%;
-    background-color: #d1e3f1;
+    background-color: #ffffff;
 }
 .marcosProjectIntro {
     height: 15em;
@@ -1198,7 +1198,7 @@ main {
         align-items: center;
         padding-left: 1em;
         width: 100%;
-        height: 10em;
+        height: 4em;
         margin-top: 3em;
         text-align: left;
         background-image: none;
@@ -1240,6 +1240,7 @@ main {
         flex-direction: column;
         height: 152em;
         width: 100%;
+        background-color: #ffffff;
     }
 }
 
@@ -1440,6 +1441,7 @@ main {
         flex-direction: column;
         height: 148em;
         width: 100%;
+        background-color: #ffffff;
     }
 }
 
